added gitignore
